ingress_gitlab_web.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gitlabwebservice
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: tccmurilo.sj.ifsc.edu.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitlab-webservice-default
            port:
              number: 8181
      - path: /admin/sidekiq/
        pathType: Prefix
        backend:
          service:
            name: gitlab-webservice-default
            port:
              number: 8080
  tls:
  - hosts:
    - tccmurilo.sj.ifsc.edu.br
    secretName: tls-tcc
