ingress_nginx_test.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-test
  annotations:
    kubernetes.io/ingress.class: nginx
#    nginx.ingress.kubernetes.io/ssl-redirect: "false"
#    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: tccmurilo.sj.ifsc.edu.br
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: gitlab-webservice-default
            port:
              number: 8181
#      - path: /gerrit(/|$)(.*)
      - path: /gerrit/(.*)
        pathType: Prefix
        backend:
          service:
            name: gerrit-master-gerrit-service
            port:
              number: 8090
  tls:
  - hosts:
    - tccmurilo.sj.ifsc.edu.br
    secretName: tls-tcc
